LibWeb: Add IDBTransaction

--- a/Libraries/LibWeb/CMakeLists.txt
+++ b/Libraries/LibWeb/CMakeLists.txt
@@ -507,12 +507,13 @@ set(SOURCES
     IndexedDB/Internal/Algorithms.cpp
     IndexedDB/Internal/Database.cpp
     IndexedDB/IDBCursor.cpp
-    IndexedDB/IDBFactory.cpp
     IndexedDB/IDBDatabase.cpp
+    IndexedDB/IDBFactory.cpp
     IndexedDB/IDBIndex.cpp
     IndexedDB/IDBObjectStore.cpp
     IndexedDB/IDBOpenDBRequest.cpp
     IndexedDB/IDBRequest.cpp
+    IndexedDB/IDBTransaction.cpp
     IndexedDB/IDBVersionChangeEvent.cpp
     Internals/Inspector.cpp
     Internals/InternalAnimationTimeline.cpp
